# product-image-validator

./: README.md  handler_fastapi.py  pyproject.toml
.venv-poetry/: pyvenv.cfg
project/image_validator/: main.py
project/image_validator/route/: __init__.py  main.py
project/image_validator/service/: __init__.py  image_validator_api.py
